OO-3723: implements metadata at local file level, fix delete issues
Fix deletion of metadata, fix left files by restore of versioned files,
implement restore of metadata of deleted versioned files, implements an
upgrader to delete metadata of deleted resources, courses, groups,
forums, users and temporary uploaded files